--- a/ionic-presentation-app/package.json
+++ b/ionic-presentation-app/package.json
@@ -19,6 +19,7 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
+    "@ionic/storage": "^3.0.6",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "ionicons": "^7.0.0",
